# my-player-demo

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: CustomSlider.cpp.A0ECE0A86B877E3C.idx  CustomSlider.h.9C33A9D10A2953F3.idx  about.cpp.A09CAAE4F2ABE88C.idx  about.h.9F3B30D81F748245.idx  ctrlbar.cpp.AAD2CCE8C47652B7.idx  ctrlbar.h.9971DABF142D286E.idx  customthread.cpp.F0CE303CD8604C40.idx  customthread.h.BF5EBF95CDB54486.idx  datactl.h.ED6EDBB71B2928AE.idx  globalhelper.cpp.CB80ECE734265632.idx  globalhelper.h.AACA3007A8753E6E.idx  main.cpp.C9A7384515F9506F.idx  mainwid.cpp.DD4068FD3C24BCF5.idx  mainwid.h.4DF958A8EDA108C6.idx  medialist.cpp.D12AC8EBD1CFDE9A.idx  medialist.h.A5EC81B050E73055.idx  playlist.cpp.AB83A4D6A91DB68D.idx  playlist.h.B4F6E7F1F3276E01.idx  settingwid.cpp.E97FC97C98697FB4.idx  settingwid.h.71927149A3D976C3.idx  show.cpp.1192CAA34F0ED061.idx  show.h.AAED08DAE94F2EDD.idx  title.cpp.287883638EBAD2D5.idx  title.h.14FA88E7494D2D49.idx  videoctl.cpp.D42F9F4DC46C23D2.idx  videoctl.h.13DA9970B91B02E8.idx
src/: CMakeLists.txt  CustomSlider.h  about.ui  ctrlbar.cpp  ctrlbar.h  datactl.h  globalhelper.h  main.cpp  mainwid.cpp  mainwid.h  playlist.cpp  playlist.h  show.cpp  show.h  videoctl.cpp  videoctl.h
src/res/: menu.json
